<resources>
    <string name="app_name">Hera-bangkit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hai">Hai,</string>
    <string name="text_topik">Ini beberapa topik yang tersedia untuk kamu baca </string>
    <string name="tambahkan">Tambahkan</string>
    <string name="sostextpost">Berikan sinyal kepada guardian untuk menyelamatkanmu sekarang juga</string>
    <string name="buat_sinyal_sos">Buat Sinyal SOS</string>
    <string name="laporkan_kasus_yang_kamu_alami_langsung_ke_kpppa">Laporkan kasus yang kamu alami langsung ke KPPPA</string>
    <string name="lapor_kppa">Lapor KPPPA</string>
    <string name="bagikan_cerita">Bagikan Cerita</string>
    <string name="text_bagikan">Bagikan cerita yang kamu alami, informasikan kasus yang menimpamu</string>
    <string name="laporkan_kasus">Laporkan Kasus</string>
    <string name="buat_cerita">Buat Cerita</string>
    <string name="profil">Profil</string>
    <string name="avatar">Avatar</string>
    <string name="home_content_temp">Tolong laki laki disini mata jelalatan Semua, mereka pada maksa dan suka menggangu.</string>
    <string name="option_menu">option_menu</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tulis_laporan">Tulis Laporan</string>
    <string name="post">Post</string>
    <string name="apa_yang_kamu_alami">Apa yang kamu alami?</string>
    <string name="tambahkan_gambar">Tambahkan Gambar</string>
    <string name="tambahkan_lokasi">Tambahkan Lokasi</string>
    <string name="tulis_cerita">Tulis Cerita</string>
    <string name="sinyal_sos">Sinyal    SOS</string>
    <string name="bahaya">Apakah kamu dalam bahaya?</string>
    <string name="tombol_dikirim">Tekan tombol dibawah dan SOS akan dikirim ke guardianmu</string>
    <string name="sos">SOS</string>
    <string name="batalkan_sos">Batalkan SOS</string>
    <string name="search">Pencarian</string>
    <string name="hint_search">Cari topik kasus ...</string>
    <string name="kasus_marak">Kasus yang sedang marak terjadi</string>
    <string name="minggu_ini">Minggu Ini</string>
    <string name="kronologi_kejadianmu">Kronologi Kejadianmu...</string>
    <string name="kategori_kasus">Kategori Kasus</string>
    <string name="tagar">Tagar</string>
    <string name="hasil_pencarian_untuk">Hasil Pencarian Untuk</string>
    <string name="coba_kata_kunci_lain">Coba Kata Kunci Lain</string>
    <string name="topik_yang_dicari_tidak_ditemukan">Topik yang dicari tidak ditemukan</string>
    <string name="tab_1">Ceritamu</string>
    <string name="tab_2">Laporanmu</string>
    <string name="button_setting">Button Setting</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="preferensi_bahasa">Preferensi Bahasa</string>
    <string name="tentang">Tentang</string>
    <string name="keluar">Keluar</string>
    <string name="back_button">Back Button</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="detail_laporan">Detail Laporan</string>
    <string name="nama_pengirim">Nama Pengirim</string>
    <string name="nik">NIK</string>
    <string name="nomer_telepon">Nomer Telepon</string>
    <string name="waktu_laporan">Waktu Laporan</string>
    <string name="alamat">Alamat</string>
    <string name="kategori">Kategori</string>
    <string name="kronologi_kejadian">Kronologi Kejadian</string>

    <!-- annisah -->
    <string name="dashboard_description">Bagikan keresahanmu dan mintalah pertolongan dengan para guardian</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="login_desc">Masuk ke akunmu dan gunakan berbagai fitur yang tersedia</string>
    <string name="email">Email</string>
    <string name="register_success_desc">Pendaftaranmu telah selesai, mulai bagikan kisahmu dan laporkan keluhanmu kepada kami</string>
    <string name="siap">Siap!</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="register1_desc">Hai silahkan isi data berikut untuk membuat akun.</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="password">Password</string>
    <string name="code">+62</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="kelengkapan_data_diri">Kelengkapan Data Diri</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="masukkan_foto">Masukkan Foto</string>
    <string name="register_foto_desc">Masukkan foto profil untuk melengkapi datamu. (opsional)</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="verifikasi_ktp">Verifikasi KTP</string>
    <string name="masukkan_foto_ktp">Masukkan Foto KTP</string>
    <string name="keterangan">Keterangan :</string>
    <string name="verifikasi_desc">Data diri dipergunakan untuk mencegah adanya penipuan dan kejahatan yang tidak terduga. Aplikasi ini dibawah kendali Kementerian Pemberdayaan Perempuan dan Perlindungan Anak, data kamu akan kami simpan serahasia mungkin.</string>
    <string name="daftarkan_guardianmu">Daftarkan Guardianmu</string>
    <string name="guardian_desc">Guardian akan menerima pesan untuk menyelamatkanmu ketika kondisi darurat</string>
    <string name="nama_guardian_1">Nama Guardian 1</string>
    <string name="nomor_telepon_guardian_1">Nomor Telepon Guardian 1</string>
    <string name="nama_guardian_2">Nama Guardian 2</string>
    <string name="nomor_telepon_guardian_2">Nomor Telepon Guardian 2</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="privacy_desc">data kamu akan dilindungi dan bersifat privasi</string>
    <string name="regis_desc">Daftarkan akunmu dan bagikan kisah yang menimpamu</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="lengkapi_data_desc">Lengkapi data berikut sebagai data pendukung</string>
    <string name="selesai">Selesai</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="lihat_berdasarkan_tagar">Lihat berdasarkan Tagar</string>
    <string name="laporkan">Laporkan Cerita Ini</string>
    <string name="hapus_cerita_ini">Hapus Cerita Ini</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pass_desc">Masukkan email yang kamu pakai dalam aplikasi ini</string>
    <string name="kirim">Kirim</string>
    <string name="post_story">Kamu belum pernah membuat cerita</string>
    <string name="post_report">Kamu belum pernah membuat laporan</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="simpan">Simpan</string>
    <string name="about_hera">HERA (Helps and Emergency Reporting App) merupakan aplikasi berbasis Android yang dibuat untuk memberikan pencegahan dan penanganan kekerasan dan pelecehan terhadap perempuan.</string>
    <string name="about">About</string>
</resources>